@@ -1,1 +1,3 @@
 Miscellaneous minor fixes, etc.
+
+Fixes bug in which updates like a <- -a could sometimes modify a locked binding.
